@@ -86,16 +86,46 @@ AC_SUBST(VORBIS_LIBS)
 AC_SUBST(VORBISFILE_CFLAGS)
 AC_SUBST(VORBISFILE_LIBS)
 
-dnl Check for libid3tag
-PKG_CHECK_MODULES(ID3TAG, id3tag >= 0.15, HAVE_ID3TAG="yes", HAVE_ID3TAG="no")
-if test "x$HAVE_ID3TAG" = "xno"; then
-	AC_CHECK_HEADER(id3tag.h, ID3TAG_LIBS="-lid3tag -lz", AC_MSG_ERROR(You need libid3tag))
-fi
-AC_SUBST(ID3TAG_LIBS)
-
 dnl Check for FLAC
 AC_CHECK_HEADER(FLAC/all.h, FLAC_LIBS="-lFLAC", AC_MSG_ERROR(You need FLAC))
 AC_SUBST(FLAC_LIBS)
+
+dnl Check for libid3tag
+AC_ARG_ENABLE(id3tag, [  --disable-id3tag        Disable MP3 support],,have_id3tag=yes)
+if test "x$have_id3tag" = "xyes"; then
+	PKG_CHECK_MODULES(ID3TAG, id3tag >= 0.15, id3tag_detect=yes, id3tag_detect=no)
+	if test "x$id3tag_detect" = "xno"; then
+		AC_CHECK_HEADER(id3tag.h, id3tag_detect=yes, id3tag_detect=no)
+	fi
+	if test "x$id3tag_detect" = "xyes"; then
+		ID3TAG_LIBS="-lid3tag -lz"
+		AC_DEFINE(HAVE_ID3TAG, 1, id3tag support)
+	else
+		AC_DEFINE(HAVE_ID3TAG, 0, id3tag support)
+	fi
+else
+	AC_DEFINE(HAVE_ID3TAG, 0, id3tag support)
+fi
+
+AM_CONDITIONAL(HAVE_ID3TAG, test "x$have_id3tag" = "xyes")
+AC_SUBST(ID3TAG_LIBS)
+
+dnl Check for FAAD 
+AC_ARG_ENABLE(faad2, [  --disable-faad2         Disable AAC support],,have_faad2=yes)
+if test "x$have_faad2" = "xyes"; then
+	AC_CHECK_HEADER(mp4ff.h, faad2_detect=yes, faad_detect=no)
+	if test "x$faad2_detect" = "xyes"; then
+		FAAD_LIBS="-lmp4ff -lfaad"
+		AC_DEFINE(HAVE_FAAD, 1, faad2 support)
+	else
+		AC_DEFINE(HAVE_FAAD, 0, faad2 support)
+	fi
+else
+	AC_DEFINE(HAVE_FAAD, 0, faad2 support)
+fi
+
+AM_CONDITIONAL(HAVE_FAAD, test "x$have_faad2" = "xyes")
+AC_SUBST(FAAD_LIBS)
 
 dnl Check for Mono
 AC_PATH_PROG(MCS, mcs)
@@ -120,7 +150,7 @@ GACUTIL_FLAGS='/package muine /gacdir $(DESTDIR)$(libdir)'
 AC_SUBST(GACUTIL_FLAGS)
 
 AC_ARG_ENABLE(gac-install, [  --disable-gac-install   Disable GAC library installation],,gac_install=yes)
-AM_CONDITIONAL(GAC_INSTALL, test x$gac_install = xyes)
+AM_CONDITIONAL(GAC_INSTALL, test "x$gac_install" = "xyes")
 
 dnl Monodoc
 PKG_CHECK_MODULES(MONODOC, monodoc >= $MONODOC_REQUIRED, have_monodoc=yes, have_monodoc=no)
